Amnesty des Hautes Ecoles Lausannoises

--- a/index.html
+++ b/index.html
@@ -483,15 +483,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Amnesty des Hautes Ecoles Lausannoises</h3>
-                        Our association Amnesty HEL promotes the defense of human rights on Lausanne campuses by raising
-                        our
-                        students' awareness of socio-political and environmental issues. Our activities and actions are
-                        organized around 5 sections: Women's Rights, Environment, International Political News, LGBTQ+
-                        and
-                        Asylum and Migration. Within these sections, we organize a wide range of events and actions:
-                        conferences, film screenings and workshops. And also.... concrete actions: we fight against
-                        menstrual precariousness on campus, organize sustainability rallies, are currently setting up a
-                        podcast, and have already organized a waste collection. All in a caring and inclusive way.
+                        The association Amnesty HEL is dedicated to promoting the defense of human rights on Lausanne campuses by raising student awareness of socio-political and environmental issues. Its activities and actions are organized into five sections: Women's Rights, Environment, International Political News, LGBTQ+, and Asylum and Migration. Within these sections, a wide range of events and actions take place, including conferences, film screenings, workshops, and concrete initiatives. These concrete actions involve fighting against menstrual precariousness on campus, organizing sustainability rallies, setting up a podcast, and conducting waste collections. All of these activities are carried out in a caring and inclusive manner.
                     </div>
                 </div>
                 <!-- Drag Lab -->
