--- a/index_fr.html
+++ b/index_fr.html
@@ -457,14 +457,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Amnesty des Hautes Ecoles Lausannoises</h3>
-                        Notre association Amnesty HEL promeut la défense des droits humains sur les campus de Lausanne
-                        en sensibilisant nos étudiantxes aux enjeux socio-politiques environnementaux. Nos activités et
-                        actions s'organisent autour de 5 sections: Droit des Femmes, Environnement, Actualité Politique
-                        Internationale, LGBTQ+ et Asile et Migration. Au sein de celles-ci, nous organisons des
-                        événements et actions multiples: des conférences, des projections de films, des ateliers. Et
-                        aussi.... des actions concrètes: nous luttons contre la précarité menstruelle sur le campus,
-                        organisons des rallyes durabilité, nous mettons actuellement en place un podcast, avons déjà
-                        organisé une collecte de déchets. Le tout dans la bienveillance et l'inclusivité.
+                        L'association Amnesty HEL est dédiée à la promotion de la défense des droits de l'homme sur les campus de Lausanne en sensibilisant les étudiants aux questions socio-politiques et environnementales. Ses activités et actions sont organisées en cinq sections : Droits des femmes, Environnement, Actualités politiques internationales, LGBTQ+ et Asile et Migration. Au sein de ces sections, une grande variété d'événements et d'actions ont lieu, notamment des conférences, des projections de films, des ateliers et des initiatives concrètes. Ces actions concrètes comprennent la lutte contre la précarité menstruelle sur le campus, l'organisation de rassemblements pour la durabilité, la création d'un podcast et la réalisation de collectes de déchets. Toutes ces activités sont menées de manière bienveillante et inclusive.
                     </div>
                 </div>
                 <!-- Drag Lab -->
