Ingénieur.es Engagé.es

--- a/index.html
+++ b/index.html
@@ -469,11 +469,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Ingénieur.es Engagé.es</h3>
-                        Ingénieur·es Engagé·es (IE) is a federation aiming to rethink the place of engineers in society.
-                        Composed of several groups, local and thematic, carrying actions or reflections in line with our
-                        values (described in our charter), focused on socio-environmental issues. The goal of
-                        Ingénieur·es Engagé·es is to be non-partisan, favors debate, open-mindedness and fits into a
-                        horizontal framework.
+                        The Ingénieurs Engagés (IE) movement aims to bring together all those who question the role and place of engineers in society. It mainly gathers students and engineers who want to give meaning to their (future) profession, aware of the social and environmental issues that our society must face today.
                     </div>
                 </div>
                 <!-- Amnesty des Hautes Ecoles Lausannoises -->
