--- a/index_fr.html
+++ b/index_fr.html
@@ -443,11 +443,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Ingénieur.es Engagé.es</h3>
-                        Ingénieur-es Engagé-es (IE) est une fédération visant à repenser la place des ingénieurs dans la
-                        société. Composée de plusieurs groupes, locaux et thématiques, menant des actions ou des
-                        réflexions en accord avec nos valeurs (décrites dans notre charte), axées sur des questions
-                        socio-environnementales. Ingénieur-es Engagé-es se veut non partisan, privilégie le débat,
-                        l'ouverture d'esprit et s'inscrit dans un cadre horizontal.
+                        Le mouvement Ingénieurs Engagés (IE) a pour but de rassembler toutes les personnes se questionnant sur le rôle et la place des ingénieur·e·s dans la société. Il réunit principalement des étudiants et ingénieurs voulant donner du sens à leur (futur) métier, conscients des problématiques sociales et environnementales auxquelles notre société doit aujourd’hui faire face.
                     </div>
                 </div>
                 <!-- Amnesty des Hautes Ecoles Lausannoises -->
