zero emission group

--- a/index.html
+++ b/index.html
@@ -428,9 +428,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Zero Emission Group</h3>
-                        A student association that aims to promote sustainability through awareness and active
-                        collaboration
-                        with stakeholders from EPFL and its ecosystem
+                        Zero Emission Group is a student led initiative aimed at raising awareness and working with stakeholders on and beyond the EPFL campus in order to catalyze sustainable action. 🌍
                     </div>
                 </div>
                 <!-- La Convergence -->
