--- a/index_fr.html
+++ b/index_fr.html
@@ -405,8 +405,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Zero Emission Group</h3>
-                        Une association étudiante qui vise à promouvoir la durabilité par la sensibilisation et la
-                        collaboration active avec les acteurs de l'EPFL et de son écosystème.
+                        Le groupe Zéro Émission est une initiative étudiante visant à sensibiliser et à collaborer avec les acteurs de l'EPFL sur et au-delà du campus afin de catalyser des actions durables. 🌍
                     </div>
                 </div>
                 <!-- La Convergence -->
