--- a/index.html
+++ b/index.html
@@ -412,13 +412,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Queermanence</h3>
-                        Queermanence aims to be a caring and confidential listening space. This place exists to give a
-                        first
-                        warm support but also to help to find a staff (health, social or legal) trained and adapted to
-                        your
-                        needs. Our aim is to support you in difficult moments such as: Physical or verbal violence,
-                        harassment, gender discrimination but also to accompany you in your gender, sexual and intimate
-                        questions.
+                        Queermanence aims to be a caring and confidential listening space. This place exists to give an initial warm support but also to help to find a staff (health, social or legal) trained and adapted to your needs. Queermanence's objective is to offer support during challenging times, such as instances of physical or verbal violence, harassment, and gender discrimination, while also providing guidance on gender, sexual, and intimate questions.
                     </div>
                 </div>
                 <!-- Zero Emission Group -->
