--- a/index_fr.html
+++ b/index_fr.html
@@ -390,12 +390,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Queermanence</h3>
-                        Queermanence se veut un espace d'écoute bienveillant et confidentiel. Ce lieu existe pour
-                        apporter un premier soutien chaleureux mais aussi pour aider à trouver un personnel (sanitaire,
-                        social ou juridique) formé et adapté à vos besoins. Notre objectif est de vous soutenir dans les
-                        moments difficiles tels que : La violence physique ou verbale, le harcèlement, la discrimination
-                        de genre mais aussi de vous accompagner dans vos questionnements sur le genre, la sexualité et
-                        l'intimité.
+                        Queermanence se veut un espace d'écoute bienveillant et confidentiel. Ce lieu existe pour apporter un premier soutien chaleureux mais aussi pour aider à trouver un personnel (sanitaire, social ou juridique) formé et adapté à vos besoins, afin de vous soutenir dans les moments difficiles tels que : La violence physique ou verbale, le harcèlement, la discrimination de genre mais aussi de vous accompagner dans vos questionnements sur le genre, la sexualité et l'intimité.
                     </div>
                 </div>
                 <!-- Zero Emission Group -->
