--- a/index.html
+++ b/index.html
@@ -377,15 +377,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Polyquity</h3>
-                        Polyquity is an association recognized by EPFL with the following aims: 1) To be a platform for
-                        information, awareness, promotion, exchange, cooperation and action in favor of gender equality,
-                        and
-                        the fight against discrimination based on gender identities and sexual and romantic
-                        orientations. 2)
-                        The association also supports actions against discrimination on campus. 3) The association
-                        defends
-                        the interests and supports the victims of discrimination, and promotes a culture of respect both
-                        internally and on campus.
+                        Polyquity is a commission of AGEPoly, the student association of EPFL. Its main objectives are to provide open discussions on issues of discrimination and to raise awareness on campus about existing discriminations and ways to combat them. To achieve this, it organizes coffee discussions, workshops, and is responsible for the Instagram account "payetonepfl," which exposes and highlights discriminatory situations experienced on the EPFL campus, as well as numerous other projects to make everyday life at EPFL sustainable and inclusive for everyone.
                     </div>
                 </div>
                 <!-- PlanQueer -->
