--- a/index_fr.html
+++ b/index_fr.html
@@ -361,13 +361,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Polyquity</h3>
-                        Polyquity est une association reconnue par l’EPFL ayant les buts suivants: 1) Être une
-                        plate-forme d’information, de sensibilisation, de promotion, d’échange, de coopération et
-                        d’action en faveur de l’égalité des genres, et de la lutte contre les discriminations basées sur
-                        les identités de genre et les orientations sexuelles et romantiques. 2) L’association soutient
-                        également les actions contre les discriminations présentes sur le campus. 3) L’association
-                        défend les intérêts et soutient les personnes victimes de discriminations et promeut une culture
-                        du respect en interne et sur le campus.
+                        Polyquity est une commission de l’AGEPoly, l’association des étudiant·x·e·s de l’EPFL. Ses objectifs principaux sont d’offrir des discussions ouvertes sur les questions de discrimination, ainsi que de sensibiliser le campus sur toutes les discriminations déjà existantes et aux moyens de les combattre. Elle organise pour cela des cafés-discussions, des ateliers, et est à l’origine du compte instagram payetonepfl, qui dénonce et rend visible les situations discriminatoires vécues sur le campus de l’EPFL, ainsi que de nombreux autres projets pour rendre le quotidien à l’EPFL durable et viable pour tou·x·te·s.
                     </div>
                 </div>
                 <!-- PlanQueer -->
