--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Marché EPFL</h3>
-                        EPFL weekly market on Mondays from 10 a.m. to 4 p.m. on the Esplanade.
+                        EPFL's weekly market on Mondays from 10 a.m. to 4 p.m. on the Esplanade.
                     </div>
                 </div>
                 <!-- Epicerie coopérative le Vorace -->
