--- a/index.html
+++ b/index.html
@@ -294,8 +294,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Point Smart (Cellphones)</h3>
-                        In order to extend the life of mobile phones, a repair service at cost price is offered on the
-                        Ecublens campus every day between noon and 2 p.m. at the Poseidon premises.
+                        Point Smart extends the life of mobile phones by offering a at cost price repair service at the Poseidon premises on the Ecublens campus. This service is available daily from noon to 2 p.m.
                     </div>
                 </div>
                 <!-- Marché EPFL -->
