--- a/index_fr.html
+++ b/index_fr.html
@@ -280,9 +280,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Point Smart (Cellphones)</h3>
-                        Afin de prolonger la durée de vie des téléphones portables, un service de réparation à prix
-                        coûtant est offert sur le campus d’Ecublens tous les jours entre midi et 14 heures dans les
-                        locaux de Poséidon.
+                        Point Smart prolonge la durée de vie des téléphones mobiles en proposant un service de réparation au prix coûtant sur le site de Poseidon, sur le campus d'Ecublens. Ce service est disponible tous les jours de midi à 14 heures.
                     </div>
                 </div>
                 <!-- Marché EPFL -->
