--- a/index.html
+++ b/index.html
@@ -276,13 +276,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Point Vélo</h3>
-                        Point Vélo is the cornerstone of our efforts to encourage cycling. Located on our Lausanne
-                        campus,
-                        it serves as a point of sale for new and used bikes and for cycling gear at reduced prices; it
-                        also
-                        offers at-cost repairs and free bike mechanics classes. These products and services are
-                        available
-                        only to EPFL community members. You will be asked to present your Campiro card.
+                        Point Vélo is a place where EPFL community members can buy new and used bikes and cycling gear at reduced prices, get affordable bike repairs, and attend free bike mechanics classes. These products and services are available only to EPFL community members. You will be asked to present your Campiro card.
                     </div>
                 </div>
                 <!-- Point Smart (Cellphones) -->
