--- a/index_fr.html
+++ b/index_fr.html
@@ -265,10 +265,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Point Vélo</h3>
-                        Le Point Vélo est le cœur du mouvement cycliste à l’EPFL : vente de vélos neufs, d’occasion et
-                        d’équipements cyclistes, réparations à prix réduit et cours de mécanique gratuits. Ces produits
-                        et services sont exclusivement réservés à la communauté EPFL sur présentation de la carte
-                        CAMIPRO.
+                        Point Vélo est un lieu où les membres de la communauté de l'EPFL peuvent acheter des vélos neufs et d'occasion ainsi que des équipements cyclistes à des prix réduits, bénéficier de réparations de vélo abordables et participer à des cours de mécanique vélo gratuits. Ces produits et services sont disponibles uniquement pour les membres de la communauté de l'EPFL sur présentation de la carte CAMIPRO.
                     </div>
                 </div>
                 <!-- Point Smart (Cellphones) -->
