--- a/index.html
+++ b/index.html
@@ -249,22 +249,15 @@
                 </div>
                 <!-- Fix n’Replace (Repair café) -->
                 <div class="bubble smaller" id="Fixn’ReplaceRepaircafé">
-                    <a href="https://www.instagram.com/fixnreplace/">
+                    <a href="https://unipoly.ch/fix_n_replace-english/">
                         <img src="logo\fix n replace logo.png" alt="Image">
                     </a>
                     <div class="text-description">
                         <h3>Fix n’Replace (Repair café)</h3>
-                        Come to the SPOT every first Thursday of the month to repair your damaged and broken objects
-                        rather
-                        than throwing them away ! This Repair Cafe aims to fight overconsumption and its waste
-                        production by
-                        extending the lifetime of objects and showing how one can shift towards a circular usage of
-                        goods.
-                        We want to promote reusability in common objects of all kinds, ranging from household appliances
-                        to
-                        clothing by providing easy access to repairing experts while learning the basics of repairing
-                        along
-                        the way.
+                        Fix N’Replace organizes a series of "Repair Café" events on the UNIL/EPFL campuses. The
+                        organization's goal is to combat waste by extending the lifespan of various objects. They aim to
+                        promote reuse by providing easy access to repair services and teaching the fundamentals of
+                        repair🐣.
                     </div>
                 </div>
                 <!-- Point Vélo -->
@@ -566,7 +559,10 @@
                     </a>
                     <div class="text-description">
                         <h3>Ucreate</h3>
-                        The UCreate entrepreneurial program is open to all members of the UNIL community, including students, researchers, professors, employees, and alumni. This bilingual and interdisciplinary program provides support for various project types, with an emphasis on projects with a social and/or environmental impact.
+                        The UCreate entrepreneurial program is open to all members of the UNIL community, including
+                        students, researchers, professors, employees, and alumni. This bilingual and interdisciplinary
+                        program provides support for various project types, with an emphasis on projects with a social
+                        and/or environmental impact.
                     </div>
                 </div>
                 <!-- Durabilis -->
@@ -593,7 +589,12 @@
                     </a>
                     <div class="text-description">
                         <h3>Make</h3>
-                        The MAKE initiative makes it possible to integrate interdisciplinarity, project-based learning, experimentation and prototyping into students’ curricula. The initiative provides teachers with Discovery Learning Labs (DLLs). Spaces including state-of-the-art equipment to offer practical work directly related to research or the industrial environment. Finally, the initiative also provides students (bachelor and master) with a professional consulting service and prototyping spaces to support them in the realization of their open projects.
+                        The MAKE initiative makes it possible to integrate interdisciplinarity, project-based learning,
+                        experimentation and prototyping into students’ curricula. The initiative provides teachers with
+                        Discovery Learning Labs (DLLs). Spaces including state-of-the-art equipment to offer practical
+                        work directly related to research or the industrial environment. Finally, the initiative also
+                        provides students (bachelor and master) with a professional consulting service and prototyping
+                        spaces to support them in the realization of their open projects.
                     </div>
                 </div>
                 <!-- Low Tech Lab -->
@@ -656,7 +657,9 @@
                     </a>
                     <div class="text-description">
                         <h3>Sports Universitaires Lausanne (SUL)</h3>
-                        The Lausanne University Sports (SUL) offer a variety of physical activities and sports to members of the University and the Swiss Federal Institute of Technology in Lausanne (EPFL) community in the fantastic setting of the University Sports Center at Dorigny.
+                        The Lausanne University Sports (SUL) offer a variety of physical activities and sports to
+                        members of the University and the Swiss Federal Institute of Technology in Lausanne (EPFL)
+                        community in the fantastic setting of the University Sports Center at Dorigny.
                     </div>
                 </div>
                 <!-- Espace-Transitions -->
@@ -666,7 +669,11 @@
                     </a>
                     <div class="text-description">
                         <h3>Espace-Transitions</h3>
-                        The Espace Transitions is a project established to welcome reflections and feelings on sustainability issues, and subsequently, to offer support in taking action to help you find a project that suits you and/or provide you with tools to realize your own. To this end, the team will be present to welcome you for a meal and discussion every Thursday from 12:15 PM to 1:45 PM at the Transitions Space.
+                        The Espace Transitions is a project established to welcome reflections and feelings on
+                        sustainability issues, and subsequently, to offer support in taking action to help you find a
+                        project that suits you and/or provide you with tools to realize your own. To this end, the team
+                        will be present to welcome you for a meal and discussion every Thursday from 12:15 PM to 1:45 PM
+                        at the Transitions Space.
                     </div>
                 </div>
                 <!-- Trust and Support Network (TSN) -->
