--- a/index_fr.html
+++ b/index_fr.html
@@ -227,7 +227,7 @@
                         pendant un certain temps et les reprendre par la suite. Le mercredi soir dès 17h, la Maison de
                         la Durabilité est ouverte pour le prêt et la réception des objets.
                     </div>
-                </div>                
+                </div>
                 <!-- Meubléco -->
                 <div class="bubble smaller" id="Meubléco">
                     <a href="https://meubleco.unipoly.ch/">
@@ -243,17 +243,15 @@
                 </div>
                 <!-- Fix n’Replace (Repair café) -->
                 <div class="bubble smaller" id="Fixn’ReplaceRepaircafé">
-                    <a href="https://www.instagram.com/fixnreplace/">
+                    <a href="https://unipoly.ch/fix_n_replace/">
                         <img src="logo\fix n replace logo.png" alt="Image">
                     </a>
                     <div class="text-description">
                         <h3>Fix n’Replace (Repair café)</h3>
-                        Venez au SPOT tous les premiers jeudis du mois pour réparer vos objets endommagés et cassés
-                        plutôt que de les jeter ! Ce Repair Cafe vise à lutter contre la surconsommation et sa
-                        production de déchets en prolongeant la durée de vie des objets et en montrant comment on peut
-                        passer à un usage circulaire des biens. Nous voulons promouvoir la réutilisation d'objets
-                        courants de toutes sortes, allant de l'électroménager aux vêtements, en offrant un accès facile
-                        à des experts en réparation tout en apprenant les bases de la réparation en cours de route.
+                        Fix N’Replace organise une série d'événements "Repair Café" sur les campus de l'UNIL/EPFL.
+                        L'objectif de l'organisation est de lutter contre le gaspillage en prolongeant la durée de vie
+                        de divers objets. Ils visent à promouvoir la réutilisation en offrant un accès facile à des
+                        services de réparation et en enseignant les fondamentaux de la réparation 🐣.
                     </div>
                 </div>
                 <!-- Point Vélo -->
@@ -537,7 +535,10 @@
                     </a>
                     <div class="text-description">
                         <h3>Ucreate</h3>
-                        Le programme d'entrepreunariat UCreate s’adresse à tou·te·s les membres de la communauté UNIL : étudiant·e·s, chercheur·euse·s, professeur·e·s, employé·e·s et alumni. Ce programme bilingue et interdisciplinaire offre un soutien pour différents types de projets, en mettant l'accent sur les projets ayant un impact social et/ou environnemental..
+                        Le programme d'entrepreunariat UCreate s’adresse à tou·te·s les membres de la communauté UNIL :
+                        étudiant·e·s, chercheur·euse·s, professeur·e·s, employé·e·s et alumni. Ce programme bilingue et
+                        interdisciplinaire offre un soutien pour différents types de projets, en mettant l'accent sur
+                        les projets ayant un impact social et/ou environnemental..
                     </div>
                 </div>
                 <!-- Durabilis -->
@@ -564,7 +565,13 @@
                     </a>
                     <div class="text-description">
                         <h3>Make</h3>
-                        L’initiative MAKE permet d’intégrer interdisciplinarité, apprentissage par projet, expérimentation et prototypage au cursus des étudiantes et étudiants. L’initiative met à disposition des enseignantes et enseignants les Discovery Learning Labs (DLL). Des espaces comprenant des équipements de pointe permettant de proposer des travaux pratiques en lien direct avec la recherche ou le milieu industriel. Finalement, l’initiative fournit également aux étudiantes et étudiants (bachelor et master) un service de conseil professionnel et des espaces de prototypage pour les accompagner dans la concrétisation de leurs projets.
+                        L’initiative MAKE permet d’intégrer interdisciplinarité, apprentissage par projet,
+                        expérimentation et prototypage au cursus des étudiantes et étudiants. L’initiative met à
+                        disposition des enseignantes et enseignants les Discovery Learning Labs (DLL). Des espaces
+                        comprenant des équipements de pointe permettant de proposer des travaux pratiques en lien direct
+                        avec la recherche ou le milieu industriel. Finalement, l’initiative fournit également aux
+                        étudiantes et étudiants (bachelor et master) un service de conseil professionnel et des espaces
+                        de prototypage pour les accompagner dans la concrétisation de leurs projets.
                     </div>
                 </div>
                 <!-- Low Tech Lab -->
@@ -631,7 +638,9 @@
                     </a>
                     <div class="text-description">
                         <h3>Sports Universitaires Lausanne (SUL)</h3>
-                        Les Sports Universitaires Lausanne (SUL) proposent des activités physiques variées et du sport aux membres de la communauté de l’Université et de l’École polytechnique fédérale de Lausanne dans le fantastique cadre du Centre sportif universitaire de Dorigny.
+                        Les Sports Universitaires Lausanne (SUL) proposent des activités physiques variées et du sport
+                        aux membres de la communauté de l’Université et de l’École polytechnique fédérale de Lausanne
+                        dans le fantastique cadre du Centre sportif universitaire de Dorigny.
                     </div>
                 </div>
                 <!-- Espace-Transitions -->
@@ -641,7 +650,12 @@
                     </a>
                     <div class="text-description">
                         <h3>Espace-Transitions</h3>
-                        L'espace transitions est un projet mis en place afin d'accueillir les réflexions et les ressentis sur les questions de durabilité, et, dans un second temps, de proposer un accompagnement dans l'action afin de t'aider à trouver un projet qui te convient et/ou te donner certains outils pour réaliser le tien. Pour cela, l'équipe sera présent·e·x·s pour vous accueillir autour d'un repas discussion tous les jeudis de 12h15 à 13h45, à l'Espace Transitions.
+                        L'espace transitions est un projet mis en place afin d'accueillir les réflexions et les
+                        ressentis sur les questions de durabilité, et, dans un second temps, de proposer un
+                        accompagnement dans l'action afin de t'aider à trouver un projet qui te convient et/ou te donner
+                        certains outils pour réaliser le tien. Pour cela, l'équipe sera présent·e·x·s pour vous
+                        accueillir autour d'un repas discussion tous les jeudis de 12h15 à 13h45, à l'Espace
+                        Transitions.
                     </div>
                 </div>
                 <!-- Trust and Support Network (TSN) -->
