--- a/index_fr.html
+++ b/index_fr.html
@@ -251,7 +251,7 @@
                         Fix N’Replace organise une série d'événements "Repair Café" sur les campus de l'UNIL/EPFL.
                         L'objectif de l'organisation est de lutter contre le gaspillage en prolongeant la durée de vie
                         de divers objets. Ils visent à promouvoir la réutilisation en offrant un accès facile à des
-                        services de réparation et en enseignant les fondamentaux de la réparation 🐣.
+                        services de réparation et en enseignant les fondements de la réparation 🐣.
                     </div>
                 </div>
                 <!-- Point Vélo -->
